changed a lot of things

--- a/userui/js/Croppie-master/index.html
+++ b/userui/js/Croppie-master/index.html
@@ -87,7 +87,7 @@ $('.my-image').croppie();
             <div class="container">
                 <p>You can initialize Croppie with the following code:</p>
                 
-              <pre class="language-javascript"><code class="language-javascript">var c = new Croppie(document.getElementById('item'), opts);
+              <pre class="language-javascript"><code class="language-javascript">let c = new Croppie(document.getElementById('item'), opts);
 // call a method
 c.method(args);</code></pre>
             <p>Or you can use jquery</p>
@@ -289,7 +289,7 @@ $('#item').croppie(method, args);</code></pre>
                             <pre class="language-javascript"><code class="language-javascript">
 $('.my-croppie').on('update.croppie', function(ev, cropData) {});
 // or
-document.getElementById('another-croppie').addEventListener('update', function(ev) { var cropData = ev.detail; });
+document.getElementById('another-croppie').addEventListener('update', function(ev) { let cropData = ev.detail; });
                             </code></pre>
                         </li>
                     </ul>
@@ -308,7 +308,7 @@ document.getElementById('another-croppie').addEventListener('update', function(e
                         <div class="col-1-2">
                             <strong>Basic Example</strong>
                           <pre class="language-javascript"><code class="language-javascript">
-var basic = $('#demo-basic').croppie({
+let basic = $('#demo-basic').croppie({
     viewport: {
         width: 150,
         height: 200
@@ -343,8 +343,8 @@ basic.croppie('result', 'html').then(function(html) {
                             <div class="col-1-2">
                                 <strong>Vanilla Example</strong>
                                 <pre class="language-javascript"><code class="language-javascript">
-var el = document.getElementById('vanilla-demo');
-var vanilla = new Croppie(el, {
+let el = document.getElementById('vanilla-demo');
+let vanilla = new Croppie(el, {
     viewport: { width: 100, height: 100 },
     boundary: { width: 300, height: 300 },
     showZoomer: false,
@@ -373,8 +373,8 @@ vanilla.result('blob').then(function(blob) {
                             <div class="col-1-2">
                                 <strong>Resizer Example</strong>
                                 <pre class="language-javascript"><code class="language-javascript">
-var el = document.getElementById('resizer-demo');
-var resize = new Croppie(el, {
+let el = document.getElementById('resizer-demo');
+let resize = new Croppie(el, {
     viewport: { width: 100, height: 100 },
     boundary: { width: 300, height: 300 },
     showZoomer: false,
@@ -471,7 +471,7 @@ $('#hidden-demo').croppie('bind')</code></pre>
                     <h3>Visibility and Binding</h3>
                     <p>Croppie is dependent on it's container being visible when the <a href="#bind">bind</a> method is called.  This can be an issue when your croppie component is inside a modal that isn't shown. Let's take the bootstrap modal for example..</p>
                     <pre class="language-javascript"><code class="language-javascript">
-var myCroppie = $('#my-croppie').croppie(opts);
+let myCroppie = $('#my-croppie').croppie(opts);
 $('#my-modal').on('shown.bs.modal', function(){ 
     myCroppie.croppie('bind', bindOpts);
 });
