--- a/userui/js/clipboard.js-master/demo/constructor-node.html
+++ b/userui/js/clipboard.js-master/demo/constructor-node.html
@@ -16,8 +16,8 @@
 
     <!-- 3. Instantiate clipboard by passing a HTML element -->
     <script>
-    var btn = document.getElementById('btn');
-    var clipboard = new ClipboardJS(btn);
+    let btn = document.getElementById('btn');
+    let clipboard = new ClipboardJS(btn);
 
     clipboard.on('success', function(e) {
         console.log(e);
