--- a/userui/js/clipboard.js-master/demo/constructor-selector.html
+++ b/userui/js/clipboard.js-master/demo/constructor-selector.html
@@ -16,7 +16,7 @@
 
     <!-- 3. Instantiate clipboard by passing a string selector -->
     <script>
-    var clipboard = new ClipboardJS('.btn');
+    let clipboard = new ClipboardJS('.btn');
 
     clipboard.on('success', function(e) {
         console.log(e);
