--- a/userui/js/clipboard.js-master/demo/function-target.html
+++ b/userui/js/clipboard.js-master/demo/function-target.html
@@ -15,7 +15,7 @@
 
     <!-- 3. Instantiate clipboard -->
     <script>
-    var clipboard = new ClipboardJS('.btn', {
+    let clipboard = new ClipboardJS('.btn', {
         target: function() {
             return document.querySelector('div');
         }
