--- a/userui/js/clipboard.js-master/demo/function-text.html
+++ b/userui/js/clipboard.js-master/demo/function-text.html
@@ -14,7 +14,7 @@
 
     <!-- 3. Instantiate clipboard -->
     <script>
-    var clipboard = new ClipboardJS('.btn', {
+    let clipboard = new ClipboardJS('.btn', {
         text: function() {
             return 'to be or not to be';
         }
