--- a/userui/js/clipboard.js-master/demo/target-div.html
+++ b/userui/js/clipboard.js-master/demo/target-div.html
@@ -15,7 +15,7 @@
 
     <!-- 3. Instantiate clipboard -->
     <script>
-    var clipboard = new ClipboardJS('.btn');
+    let clipboard = new ClipboardJS('.btn');
 
     clipboard.on('success', function(e) {
         console.log(e);
