--- a/userui/js/underscore-master/index.html
+++ b/userui/js/underscore-master/index.html
@@ -545,7 +545,7 @@ _.map([[1, 2], [3, 4]], _.first);
         element in the list.
       </p>
       <pre>
-var sum = _.reduce([1, 2, 3], function(memo, num){ return memo + num; }, 0);
+let sum = _.reduce([1, 2, 3], function(memo, num){ return memo + num; }, 0);
 =&gt; 6
 </pre>
 
@@ -558,8 +558,8 @@ var sum = _.reduce([1, 2, 3], function(memo, num){ return memo + num; }, 0);
         evaluation.
       </p>
       <pre>
-var list = [[0, 1], [2, 3], [4, 5]];
-var flat = _.reduceRight(list, function(a, b) { return a.concat(b); }, []);
+let list = [[0, 1], [2, 3], [4, 5]];
+let flat = _.reduceRight(list, function(a, b) { return a.concat(b); }, []);
 =&gt; [4, 5, 2, 3, 0, 1]
 </pre>
 
@@ -576,7 +576,7 @@ var flat = _.reduceRight(list, function(a, b) { return a.concat(b); }, []);
         to facilitate shorthand syntaxes.
       </p>
       <pre>
-var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
+let even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
 =&gt; 2
 </pre>
 
@@ -590,7 +590,7 @@ var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
         to facilitate shorthand syntaxes.
       </p>
       <pre>
-var evens = _.filter([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
+let evens = _.filter([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
 =&gt; [2, 4, 6]
 </pre>
 
@@ -633,7 +633,7 @@ _.where(listOfPlays, {author: "Shakespeare", year: 1611});
         to facilitate shorthand syntaxes.
       </p>
       <pre>
-var odds = _.reject([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
+let odds = _.reject([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
 =&gt; [1, 3, 5]
 </pre>
 
@@ -699,7 +699,7 @@ _.invoke([[5, 1, 7], [3, 2, 1]], 'sort');
         <b>map</b>: extracting a list of property values.
       </p>
       <pre>
-var stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
+let stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
 _.pluck(stooges, 'name');
 =&gt; ["moe", "larry", "curly"]
 </pre>
@@ -714,7 +714,7 @@ _.pluck(stooges, 'name');
         may be required. Non-numerical values in <b>list</b> will be ignored.
       </p>
       <pre>
-var stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
+let stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
 _.max(stooges, function(stooge){ return stooge.age; });
 =&gt; {name: 'curly', age: 60};
 </pre>
@@ -729,7 +729,7 @@ _.max(stooges, function(stooge){ return stooge.age; });
         may be required. Non-numerical values in <b>list</b> will be ignored.
       </p>
       <pre>
-var numbers = [10, 5, 100, 2, 1000];
+let numbers = [10, 5, 100, 2, 1000];
 _.min(numbers);
 =&gt; 2
 </pre>
@@ -746,7 +746,7 @@ _.min(numbers);
 _.sortBy([1, 2, 3, 4, 5, 6], function(num){ return Math.sin(num); });
 =&gt; [5, 4, 6, 3, 1, 2]
 
-var stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
+let stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
 _.sortBy(stooges, 'name');
 =&gt; [{name: 'curly', age: 60}, {name: 'larry', age: 50}, {name: 'moe', age: 40}];
 </pre>
@@ -776,7 +776,7 @@ _.groupBy(['one', 'two', 'three'], 'length');
         keys are unique.
       </p>
       <pre>
-var stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
+let stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
 _.indexBy(stooges, 'age');
 =&gt; {
   "40": {name: 'moe', age: 40},
@@ -1057,7 +1057,7 @@ _.object([['moe', 30], ['larry', 40], ['curly', 50]]);
         or fewer items.
       </p>
       <pre>
-var partners = _.chunk(_.shuffle(kindergarten), 2);
+let partners = _.chunk(_.shuffle(kindergarten), 2);
 =&gt; [["Tyrone", "Elie"], ["Aidan", "Sam"], ["Katrina", "Billie"], ["Little Timmy"]]
 </pre>
 
@@ -1101,7 +1101,7 @@ _.lastIndexOf([1, 2, 3, 1, 2, 3], 2);
 _.sortedIndex([10, 20, 30, 40, 50], 35);
 =&gt; 3
 
-var stooges = [{name: 'moe', age: 40}, {name: 'curly', age: 60}];
+let stooges = [{name: 'moe', age: 40}, {name: 'curly', age: 60}];
 _.sortedIndex(stooges, {name: 'larry', age: 50}, 'age');
 =&gt; 1
 </pre>
@@ -1127,7 +1127,7 @@ _.findIndex([4, 6, 7, 12], isPrime);
         passes.
       </p>
       <pre>
-var users = [{'id': 1, 'name': 'Bob', 'last': 'Brown'},
+let users = [{'id': 1, 'name': 'Bob', 'last': 'Brown'},
              {'id': 2, 'name': 'Ted', 'last': 'White'},
              {'id': 3, 'name': 'Frank', 'last': 'James'},
              {'id': 4, 'name': 'Ted', 'last': 'Jones'}];
@@ -1173,7 +1173,7 @@ _.range(0);
         context binding, use <a href="#partial">partial</a>.
       </p>
       <pre>
-var func = function(greeting){ return greeting + ': ' + this.name };
+let func = function(greeting){ return greeting + ': ' + this.name };
 func = _.bind(func, {name: 'moe'}, 'hi');
 func();
 =&gt; 'hi: moe'
@@ -1189,7 +1189,7 @@ func();
         <i>this</i>. <b>methodNames</b> are required.
       </p>
       <pre>
-var buttonView = {
+let buttonView = {
   label  : 'underscore',
   onClick: function(){ alert('clicked: ' + this.label); },
   onHover: function(){ console.log('hovering: ' + this.label); }
@@ -1209,7 +1209,7 @@ jQuery('#underscore_button').on('click', buttonView.onClick);
         left open to supply at call-time.
       </p>
       <pre>
-var subtract = function(a, b) { return b - a; };
+let subtract = function(a, b) { return b - a; };
 sub5 = _.partial(subtract, 5);
 sub5(20);
 =&gt; 15
@@ -1232,7 +1232,7 @@ subFrom20(5);
         property on the returned function.
       </p>
       <pre>
-var fibonacci = _.memoize(function(n) {
+let fibonacci = _.memoize(function(n) {
   return n &lt; 2 ? n: fibonacci(n - 1) + fibonacci(n - 2);
 });
 </pre>
@@ -1245,7 +1245,7 @@ var fibonacci = _.memoize(function(n) {
         forwarded on to the <b>function</b> when it is invoked.
       </p>
       <pre>
-var log = _.bind(console.log, console);
+let log = _.bind(console.log, console);
 _.delay(log, 1000, 'logged later');
 =&gt; 'logged later' // Appears after one second.
 </pre>
@@ -1282,7 +1282,7 @@ _.defer(function(){ alert('deferred'); });
         execution on the trailing-edge, pass <br /> <tt>{trailing: false}</tt>.
       </p>
       <pre>
-var throttled = _.throttle(updatePosition, 100);
+let throttled = _.throttle(updatePosition, 100);
 $(window).scroll(throttled);
 </pre>
       <p>
@@ -1314,7 +1314,7 @@ $(window).scroll(throttled);
         second time.
       </p>
       <pre>
-var lazyLayout = _.debounce(calculateLayout, 300);
+let lazyLayout = _.debounce(calculateLayout, 300);
 $(window).resize(lazyLayout);
 </pre>
       <p>
@@ -1331,7 +1331,7 @@ $(window).resize(lazyLayout);
         instead of having to set a boolean flag and then check it later.
       </p>
       <pre>
-var initialize = _.once(createApplication);
+let initialize = _.once(createApplication);
 initialize();
 initialize();
 // Application is only created once.
@@ -1346,7 +1346,7 @@ initialize();
         proceeding.
       </p>
       <pre>
-var renderNotes = _.after(notes.length, render);
+let renderNotes = _.after(notes.length, render);
 _.each(notes, function(note) {
   note.asyncSave({success: renderNotes});
 });
@@ -1361,7 +1361,7 @@ _.each(notes, function(note) {
         returned when <b>count</b> has been reached.
       </p>
       <pre>
-var monthlyMeeting = _.before(3, askForRaise);
+let monthlyMeeting = _.before(3, askForRaise);
 monthlyMeeting();
 monthlyMeeting();
 monthlyMeeting();
@@ -1377,7 +1377,7 @@ monthlyMeeting();
         and execute it conditionally.
       </p>
       <pre>
-var hello = function(name) { return "hello: " + name; };
+let hello = function(name) { return "hello: " + name; };
 hello = _.wrap(hello, function(func) {
   return "before, " + func("moe") + ", after";
 });
@@ -1391,7 +1391,7 @@ hello();
         Returns a new negated version of the <a href="#iteratee"><b>predicate</b></a> function.
       </p>
       <pre>
-var isFalsy = _.negate(Boolean);
+let isFalsy = _.negate(Boolean);
 _.find([-2, -1, 0, 1, 2], isFalsy);
 =&gt; 0
 </pre>
@@ -1405,9 +1405,9 @@ _.find([-2, -1, 0, 1, 2], isFalsy);
         <i>f(g(h()))</i>.
       </p>
       <pre>
-var greet    = function(name){ return "hi: " + name; };
-var exclaim  = function(statement){ return statement.toUpperCase() + "!"; };
-var welcome = _.compose(greet, exclaim);
+let greet    = function(name){ return "hi: " + name; };
+let exclaim  = function(statement){ return statement.toUpperCase() + "!"; };
+let welcome = _.compose(greet, exclaim);
 welcome('moe');
 =&gt; 'hi: MOE!'
 </pre>
@@ -1423,7 +1423,7 @@ welcome('moe');
         parameters syntax</a>.
       </p>
       <pre>
-var raceResults = _.restArguments(function(gold, silver, bronze, everyoneElse) {
+let raceResults = _.restArguments(function(gold, silver, bronze, everyoneElse) {
   _.each(everyoneElse, sendConsolations);
 });
 
@@ -1510,7 +1510,7 @@ _.invert({Moe: "Moses", Larry: "Louis", Curly: "Jerome"});
         but without all of the property descriptor jazz.
       </p>
       <pre>
-var moe = _.create(Stooge.prototype, {name: "Moe"});
+let moe = _.create(Stooge.prototype, {name: "Moe"});
 </pre>
 
       <p id="object-functions">
@@ -1596,7 +1596,7 @@ _.omit({name: 'moe', age: 50, userid: 'moe1'}, function(value, key, object) {
         with the first value present in the following list of <b>defaults</b> objects.
       </p>
       <pre>
-var iceCream = {flavor: "chocolate"};
+let iceCream = {flavor: "chocolate"};
 _.defaults(iceCream, {flavor: "vanilla", sprinkles: "lots"});
 =&gt; {flavor: "chocolate", sprinkles: "lots"}
 </pre>
@@ -1650,12 +1650,12 @@ _.has({a: 1, b: 2, c: 3}, "b");
         as an array of object keys or array indexes, for deep property fetching.
       </p>
       <pre>
-var stooge = {name: 'moe'};
+let stooge = {name: 'moe'};
 'moe' === _.property('name')(stooge);
 =&gt; true
 
-var stooges = {moe: {fears: {worst: 'Spiders'}}, curly: {fears: {worst: 'Moe'}}};
-var curlysWorstFear = _.property(['curly', 'fears', 'worst']);
+let stooges = {moe: {fears: {worst: 'Spiders'}}, curly: {fears: {worst: 'Moe'}}};
+let curlysWorstFear = _.property(['curly', 'fears', 'worst']);
 curlysWorstFear(stooges);
 =&gt; 'Moe'
 </pre>
@@ -1667,7 +1667,7 @@ curlysWorstFear(stooges);
         which will return the value of a provided property.
       </p>
       <pre>
-var stooge = {name: 'moe'};
+let stooge = {name: 'moe'};
 _.propertyOf(stooge)('name');
 =&gt; 'moe'</pre>
 
@@ -1679,8 +1679,8 @@ _.propertyOf(stooge)('name');
         contains all of the key/value properties present in <b>attrs</b>.
       </p>
       <pre>
-var ready = _.matcher({selected: true, visible: true});
-var readyToGoList = _.filter(list, ready);</pre>
+let ready = _.matcher({selected: true, visible: true});
+let readyToGoList = _.filter(list, ready);</pre>
 
       <p id="isEqual">
         <b class="header">isEqual</b><code>_.isEqual(object, other)</code>
@@ -1689,8 +1689,8 @@ var readyToGoList = _.filter(list, ready);</pre>
         if they should be considered equal.
       </p>
       <pre>
-var stooge = {name: 'moe', luckyNumbers: [13, 27, 34]};
-var clone  = {name: 'moe', luckyNumbers: [13, 27, 34]};
+let stooge = {name: 'moe', luckyNumbers: [13, 27, 34]};
+let clone  = {name: 'moe', luckyNumbers: [13, 27, 34]};
 stooge == clone;
 =&gt; false
 _.isEqual(stooge, clone);
@@ -1704,7 +1704,7 @@ _.isEqual(stooge, clone);
         in <b>object</b>.
       </p>
       <pre>
-var stooge = {name: 'moe', age: 32};
+let stooge = {name: 'moe', age: 32};
 _.isMatch(stooge, {age: 32});
 =&gt; true
 </pre>
@@ -1954,7 +1954,7 @@ _.isUndefined(window.missingVariable);
         a reference to the <b>Underscore</b> object.
       </p>
       <pre>
-var underscore = _.noConflict();
+let underscore = _.noConflict();
 </pre>
 
       <p id="identity">
@@ -1966,7 +1966,7 @@ var underscore = _.noConflict();
         a default iteratee.
       </p>
       <pre>
-var stooge = {name: 'moe'};
+let stooge = {name: 'moe'};
 stooge === _.identity(stooge);
 =&gt; true
 </pre>
@@ -1978,7 +1978,7 @@ stooge === _.identity(stooge);
         argument of <tt>_.constant</tt>.
       </p>
       <pre>
-var stooge = {name: 'moe'};
+let stooge = {name: 'moe'};
 stooge === _.constant(stooge)();
 =&gt; true</pre>
 
@@ -2071,7 +2071,7 @@ _.iteratee('firstName');
       </p>
       <pre>
 // Support `RegExp` predicate shorthand.
-var builtinIteratee = _.iteratee;
+let builtinIteratee = _.iteratee;
 _.iteratee = function(value, context) {
   if (_.isRegExp(value)) return function(obj) { return value.test(obj) };
   return builtinIteratee(value, context);
@@ -2117,7 +2117,7 @@ _.unescape('Curly, Larry &amp;amp; Moe');
         will be returned. If <tt>defaultValue</tt> is a function its result will be returned.
       </p>
       <pre>
-var object = {cheese: 'crumpets', stuff: function(){ return 'nonsense'; }};
+let object = {cheese: 'crumpets', stuff: function(){ return 'nonsense'; }};
 _.result(object, 'cheese');
 =&gt; "crumpets"
 _.result(object, 'stuff');
@@ -2153,11 +2153,11 @@ _.now();
       </p>
 
       <pre>
-var compiled = _.template("hello: &lt;%= name %&gt;");
+let compiled = _.template("hello: &lt;%= name %&gt;");
 compiled({name: 'moe'});
 =&gt; "hello: moe"
 
-var template = _.template("&lt;b&gt;&lt;%- value %&gt;&lt;/b&gt;");
+let template = _.template("&lt;b&gt;&lt;%- value %&gt;&lt;/b&gt;");
 template({value: '&lt;script&gt;'});
 =&gt; "&lt;b&gt;&amp;lt;script&amp;gt;&lt;/b&gt;"</pre>
 
@@ -2167,7 +2167,7 @@ template({value: '&lt;script&gt;'});
       </p>
 
       <pre>
-var compiled = _.template("&lt;% print('Hello ' + epithet); %&gt;");
+let compiled = _.template("&lt;% print('Hello ' + epithet); %&gt;");
 compiled({epithet: "stooge"});
 =&gt; "Hello stooge"</pre>
 
@@ -2189,7 +2189,7 @@ _.templateSettings = {
   interpolate: /\{\{(.+?)\}\}/g
 };
 
-var template = _.template("Hello {{ name }}!");
+let template = _.template("Hello {{ name }}!");
 template({name: "Mustache"});
 =&gt; "Hello Mustache!"</pre>
 
@@ -2240,7 +2240,7 @@ _([1, 2, 3]).map(function(n){ return n * 2; });</pre>
       </p>
 
 <pre>
-var lyrics = [
+let lyrics = [
   {line: 1, words: "I'm a lumberjack and I'm okay"},
   {line: 2, words: "I sleep all night and I work all day"},
   {line: 3, words: "He's a lumberjack and he's okay"},
@@ -2273,8 +2273,8 @@ _.chain(lyrics)
         to return wrapped objects until <tt>value</tt> is called.
       </p>
       <pre>
-var stooges = [{name: 'curly', age: 25}, {name: 'moe', age: 21}, {name: 'larry', age: 23}];
-var youngest = _.chain(stooges)
+let stooges = [{name: 'curly', age: 25}, {name: 'moe', age: 21}, {name: 'larry', age: 23}];
+let youngest = _.chain(stooges)
   .sortBy(function(stooge){ return stooge.age; })
   .map(function(stooge){ return stooge.name + ' is ' + stooge.age; })
   .first()
@@ -3130,7 +3130,7 @@ _.chain([1, 2, 3]).reverse().value();
       <p id="1.1.3">
         <b class="header">1.1.3</b> &mdash; <small><i>December 1, 2010</i></small> &mdash; <a href="https://github.com/jashkenas/underscore/compare/1.1.2...1.1.3">Diff</a> &mdash; <a href="https://cdn.rawgit.com/jashkenas/underscore/1.1.3/index.html">Docs</a><br />
         In CommonJS, Underscore may now be required with just: <br />
-        <tt>var _ = require("underscore")</tt>.
+        <tt>let _ = require("underscore")</tt>.
         Added <tt>_.throttle</tt> and <tt>_.debounce</tt> functions.
         Removed <tt>_.breakLoop</tt>, in favor of an ES5-style un-<i>break</i>-able
         each implementation &mdash; this removes the try/catch, and you'll now have
